--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -29,9 +29,9 @@
             <li><a href="/tags/">TAGS</a></li>
             <li><a href="/about/">ABOUT</a></li>
             <li><a href="/images/radford_cv.pdf">CV</a></li>
-            <li><a href="https://www.github.com/benradford"><i class='fa fa-github-alt'></i></a></li>  
-            <li><a href="https://www.twitter.com/ben_j_radford"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/benjaminradford"><i class='fa fa-linkedin'></i></a></li>  
+            <li><a href="https://github.com/Caesaryang"><i class='fa fa-github-alt'></i></a></li>  
+            <li><a href="https://twitter.com/CaesarYang"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/caesaryang"><i class='fa fa-linkedin'></i></a></li>  
         </ul>
     </center> 
 </head>
