--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -28,7 +28,7 @@
             <li><a href="/archives/">ARCHIVE</a></li>
             <li><a href="/tags/">TAGS</a></li>
             <li><a href="/about/">ABOUT</a></li>
-            <li><a href="/images/radford_cv.pdf">CV</a></li>
+            <li><a href="/images/caesar_cv.pdf">CV</a></li>
             <li><a href="https://github.com/Caesaryang"><i class='fa fa-github-alt'></i></a></li>  
             <li><a href="https://twitter.com/CaesarYang"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://www.linkedin.com/in/caesaryang"><i class='fa fa-linkedin'></i></a></li>  
