--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <!-- HEADER IMAGE -->
     <center>
         <span class="main-header-image">
-            <a href="/"><img src="/images/clean-and-simple-header.jpg"></a>
+            <a href="/"><img src="/images/clean-and-simple-header.JPG"></a>
         </span>
     </center>
 
