--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <!-- HEADER IMAGE -->
     <center>
         <span class="main-header-image">
-            <a href="/"><img src="zeshiyang.github.io/images/blog_header.jpg"></a>
+            <a href="/"><img src="images/default-header.PNG"></a>
         </span>
     </center>
 
