--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
 
             <div class="featured-image">
                 {% if page.featured-image == "" or page.featured-image == nil %}
-                    <img src="/images/default-header.png", style="width:100%">
+                    <img src="/images/blog_header.jpg", style="width:100%">
                 {% else %}
                     <img src="{{ page.featured-image }}" style="width:100%">
                 {% endif %}
