--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,15 +29,7 @@
         </ul>
     </center> 
 </head>
-div.cnt {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-    min-height: 150px;
-    min-width: 150px;
-}
+
 <!-- BODY -->
 <body id="post-index">
     {% include browser-upgrade.html %}
@@ -49,13 +41,13 @@ div.cnt {
               
                 {% if page.featured-image == "" or page.featured-image == nil %}
 
-                 <div class="ctn">
+               
                     <img src="/images/blog_header.jpg", style="width:100%">
-                 </div>
+               
                 {% else %}
-                  <div class="ctn">
-                    <img src="{{ page.featured-image }}" style="width:50%">
-                  </div>
+                  
+                    <img src="{{ page.featured-image }}" style="width:50%,margin-let:auto; margin:right:auto">
+                  
                 {% endif %}
             </div>
             
