--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@
                
                 {% else %}
                   
-                    <img src="{{ page.featured-image }}" style="width:50%,margin-left:auto; margin:right:auto">
+                    <img src="{{ page.featured-image }}" style="width:50%;margin-left:auto; margin:right:auto">
                   
                 {% endif %}
             </div>
