--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,7 @@
             <li><a href="/tags/">TAGS</a></li>
             <li><a href="/about/">ABOUT</a></li>
             <li><a href="/images/Tony-zeshi Yang resume.pdf">CV</a></li>
+            <li><a href="https://www.youtube.com/">youuuuu</a></li>
             <li><a href="https://github.com/tonyzyang"><i class='fa fa-github-alt'></i></a></li>  
             <li><a href="https://twitter.com/yangzeshi"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><i class='fa fa-linkedin'></i></a></li>
