--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -26,6 +26,7 @@
             <li><a href="/trying/">trying</a></li>
             <li><a href="/Classes/">Classes</a></li>
             
+            <li><a href="/ML and DM projects/">ML&DM</a></li>
             <li><a href="https://github.com/tonyzyang"><i class='fa fa-github-alt'></i></a></li>  
             <li><a href="https://twitter.com/yangzeshi"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><i class='fa fa-linkedin'></i></a></li>  
