--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -17,7 +17,7 @@
 </head>
  
 <!-- BODY -->
-<body id="post-index">
+<body id="post-index" background="/image/background.jpg">
     {% include browser-upgrade.html %}
 
     <!-- MAIN -->
