--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -21,7 +21,7 @@
     {% include browser-upgrade.html %}
 
     <!-- MAIN -->
-    <div id="main" role="main">
+    <div id="main" role="main" class="entry-content">
       {{ content }}
     </div>       
 </body>
