--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -34,7 +34,7 @@
 </head>
  
 <!-- BODY -->
-<body id="post-index" background="/image/background.jpg">
+<body id="post-index" background="/image/background1.jpg">
     {% include browser-upgrade.html %}
 
     <!-- MAIN -->
