--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -14,21 +14,21 @@
         </span>
     </center>
 
-     <!-- NAVIGATION -->
+    <!-- NAVIGATION -->
     <br>
     <center>
         <ul class="navigation-bar">
-            <li><a href="/">HOME</a></li>
-            <li><a href="/archives/">ARCHIVE</a></li>
-            <li><a href="/tags/">TAGS</a></li>
-            <li><a href="/about/">ABOUT</a></li>
-            <li><a href="/images/Tony-zeshi Yang resume.pdf">CV</a></li>
-            <li><a href="/trying/">trying</a></li>
-            <li><a href="/Classes/">Classes</a></li>
-            <li><a href="/ML and DM projects/">ML&DM</a></li>
-            <li><a href="https://github.com/tonyzyang"><i class='fa fa-github-alt'></i></a></li>  
-            <li><a href="https://twitter.com/yangzeshi"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><i class='fa fa-linkedin'></i></a></li>
+            <li><a href="/"><b>HOME</a></b></li>
+            <li><a href="/archives/"><b>ARCHIVE</b></a></li>
+            <li><a href="/tags/"><b>TAGS</b></a></li>
+            <li><a href="/about/"><b>ABOUT</b></a></li>
+            <li><a href="/images/Tony-zeshi Yang resume.pdf"><b>CV</b></a></li>
+            <li><a href="/trying/"><b>trying</a></li>
+            <li><a href="/Classes/"><b>Classes</b></a></li>
+            <li><a href="/ML and DM projects/"><b>ML&DM</b></a></li>
+            <li><a href="https://github.com/tonyzyang"><b><i class='fa fa-github-alt'></i></b></a></li>  
+            <li><a href="https://twitter.com/yangzeshi"><b><i class="fa fa-twitter"></i></b></a></li>
+            <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><b><i class='fa fa-linkedin'>/<b></i></a></li>
         </ul>
     </center> 
 </head>
