--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
 </head>
 
 <!-- BODY -->
-<body id="post-index">
+<body id="post-index" background="/images/background1.jpg">
     {% include browser-upgrade.html %}
     
     <div id="main" role="main">
