--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,9 +23,10 @@
             <li><a href="/tags/"><b>TAGS</b></a></li>
             <li><a href="/about/"><b>ABOUT</b></a></li>
             <li><a href="/images/Tony-zeshi Yang resume.pdf"><b>CV</b></a></li>
-            <li><a href="/trying/"><b>trying</a></li>
+            
             <li><a href="/Classes/"><b>Classes</b></a></li>
             <li><a href="/ML and DM projects/"><b>ML&DM</b></a></li>
+            <li><a href="/trying/"><b>Register/Log in</b></a></li>
             <li><a href="https://github.com/tonyzyang"><b><i class='fa fa-github-alt'></i></b></a></li>  
             <li><a href="https://twitter.com/yangzeshi"><b><i class="fa fa-twitter"></i></b></a></li>
             <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><b><i class='fa fa-linkedin'>/<b></i></a></li>
