--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -18,7 +18,7 @@
     <br>
     <center>
         <ul class="navigation-bar">
-            <li><a href="/"><b>HOME</a></b></li>
+            <li><a href="/index.html"><b>HOME</a></b></li>
             <li><a href="/archives/"><b>ARCHIVE</b></a></li>
             <li><a href="/tags/"><b>TAGS</b></a></li>
             <li><a href="/about/"><b>ABOUT</b></a></li>
