--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -22,8 +22,8 @@
             <li><a href="/archives/"><b>ARCHIVE</b></a></li>
             <li><a href="/tags/"><b>TAGS</b></a></li>
             <li><a href="/about/"><b>ABOUT</b></a></li>
-
             
+            <li><a href="/Equity Report/"><b>Equity Report</b></a></li>
             <li><a href="/Classes/"><b>Classes</b></a></li>
             <li><a href="/ML and DM projects/"><b>ML&DM</b></a></li>
             <li><a href="/trying/"><b>Register/Log in</b></a></li>
